--------------------------------------------------------------------
Data Crow version 4.10                        Released on 2023-08-xx
--------------------------------------------------------------------

[New]
- Attachments can now be added to items. These documents are stored within the Data Crow data set in a compressed format.
  All main modules allow for attachments to be added.
- New Russian translations has been added (not finalized) - major thanks to Ilya Sigidin.

[Changed]
- Portuguese translation has been updated - major thanks to Pedro Albuquerque.
- Data Crow will no longer close windows or exit when pressing the escape key. This has been changed to CTRL/COMMAND+ESC.
- Added drag and drop support for pictures (from file and directly from web pages).
- Create multiple now allows for rows to be deleted.
- Create multiple will only show one message when multiple items could not be saved.
- Update All will now process all items and show a combined message on failures (due to constraints) rather then individual messages.
- Filter dialog will keep the selected field and operator when adding entries.
- Extended the image formats supported by Data Crow.
- Online search will now store images to the temporary folder instead of keeping the images completely in memory.
 
[Fixed]
- Incorrect alignment of the filter label on the related items tab.
- Update all dialog; could not create new reference using the icon for the reference / references field.
- Create multiple items dialog; sometimes, for custom modules, no fields are displayed. Now, all enabled and editable fields are displayed. 
- Item form settings; sometimes it does not show any fields available for assignment.
- UI scaling session can get lost when switching between user folders.
- Filter dialog shows value field for is filled / is empty operator when switching between fields.
- OpenLibrary search: edition data mix up (sometimes) causing incorrect results