@@ -5,12 +5,14 @@ Data Crow version 4.10                        Released on 2023-08-xx
 [New]
 - Attachments can now be added to items. These documents are stored within the Data Crow data set in a compressed format.
   All main modules allow for attachments to be added.
+- Images are not stored with a maximum resolution,
+- Added drag and drop support for pictures (from file and directly from web pages) and attachments.
 - New Russian translations has been added (not finalized) - major thanks to Ilya Sigidin.
+
 
 [Changed]
 - Portuguese translation has been updated - major thanks to Pedro Albuquerque.
 - Data Crow will no longer close windows or exit when pressing the escape key. This has been changed to CTRL/COMMAND+ESC.
-- Added drag and drop support for pictures (from file and directly from web pages).
 - Create multiple now allows for rows to be deleted.
 - Create multiple will only show one message when multiple items could not be saved.
 - Update All will now process all items and show a combined message on failures (due to constraints) rather then individual messages.
@@ -28,7 +30,8 @@ Data Crow version 4.10                        Released on 2023-08-xx
 - OpenLibrary search: edition data mix up (sometimes) causing incorrect results
 - OpenLibrary search: language not imported when searching on ISBN
 - OpenLibrary search: ISBN10 and ISBN13 should always be filled but are sometimes blank
-- Several minor potential memory leaks have been fixed 
+- Several minor potential memory leaks have been fixed
+- When server and client run in different languages issues could occur with the data filters
 
 
 --------------------------------------------------------------------
